--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.54.0",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.5",
     "next-sanity": "^9.4.5",
     "react": "^18",
